src/parsers/pegjs-parsers/math.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

var Node = require("./mathParserNode.js");

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Expression: peg$parseExpression },
      peg$startRuleFunction  = peg$parseExpression,

      peg$c0 = peg$otherExpectation("expression"),
      peg$c1 = peg$otherExpectation("operation or factor"),
      peg$c2 = "=",
      peg$c3 = peg$literalExpectation("=", false),
      peg$c4 = function(head, tail) {
          return tail.reduce(function(result, element) {
            return new Node(element[1] , [result, element[3]]);
          }, head);
        },
      peg$c5 = "||",
      peg$c6 = peg$literalExpectation("||", false),
      peg$c7 = "&&",
      peg$c8 = peg$literalExpectation("&&", false),
      peg$c9 = "==",
      peg$c10 = peg$literalExpectation("==", false),
      peg$c11 = ">",
      peg$c12 = peg$literalExpectation(">", false),
      peg$c13 = "<",
      peg$c14 = peg$literalExpectation("<", false),
      peg$c15 = ">=",
      peg$c16 = peg$literalExpectation(">=", false),
      peg$c17 = "<=",
      peg$c18 = peg$literalExpectation("<=", false),
      peg$c19 = "+",
      peg$c20 = peg$literalExpectation("+", false),
      peg$c21 = "-",
      peg$c22 = peg$literalExpectation("-", false),
      peg$c23 = "*",
      peg$c24 = peg$literalExpectation("*", false),
      peg$c25 = "/",
      peg$c26 = peg$literalExpectation("/", false),
      peg$c27 = function(head, tail) {
          if(options.autoMult){
            return tail.reduce(function(result, element) {
              return new Node("*" , [result, element[1]]);
            }, head);
          } else {
            throw {
              message: 'invalid syntax, hint: missing * sign',
              location: location()
            }
          }
        },
      peg$c28 = function(base, exp, fac) {
          if (exp) base = new Node('^', [base, exp]);
          if (fac) base = new Node('!', [base]);
          return base;
        },
      peg$c29 = ",",
      peg$c30 = peg$literalExpectation(",", false),
      peg$c31 = function(head, tail) {
            if (tail.length){
              return new Node(',', [head].concat(tail.map(a => a[3])));
            }
            return [head];
          },
      peg$c32 = peg$otherExpectation("functions"),
      peg$c33 = function(name, exp, arg) {
          let func = new Node('function', [arg], {name, isBuiltIn:true});
          if(!exp) return func;
          else return new Node('^', [func, exp]);
        },
      peg$c34 = "sinh",
      peg$c35 = peg$literalExpectation("sinh", false),
      peg$c36 = "cosh",
      peg$c37 = peg$literalExpectation("cosh", false),
      peg$c38 = "tanh",
      peg$c39 = peg$literalExpectation("tanh", false),
      peg$c40 = "sech",
      peg$c41 = peg$literalExpectation("sech", false),
      peg$c42 = "csch",
      peg$c43 = peg$literalExpectation("csch", false),
      peg$c44 = "coth",
      peg$c45 = peg$literalExpectation("coth", false),
      peg$c46 = "arsinh",
      peg$c47 = peg$literalExpectation("arsinh", false),
      peg$c48 = "arcosh",
      peg$c49 = peg$literalExpectation("arcosh", false),
      peg$c50 = "artanh",
      peg$c51 = peg$literalExpectation("artanh", false),
      peg$c52 = "arsech",
      peg$c53 = peg$literalExpectation("arsech", false),
      peg$c54 = "arcsch",
      peg$c55 = peg$literalExpectation("arcsch", false),
      peg$c56 = "arcoth",
      peg$c57 = peg$literalExpectation("arcoth", false),
      peg$c58 = "sin",
      peg$c59 = peg$literalExpectation("sin", false),
      peg$c60 = "cos",
      peg$c61 = peg$literalExpectation("cos", false),
      peg$c62 = "tan",
      peg$c63 = peg$literalExpectation("tan", false),
      peg$c64 = "sec",
      peg$c65 = peg$literalExpectation("sec", false),
      peg$c66 = "csc",
      peg$c67 = peg$literalExpectation("csc", false),
      peg$c68 = "cot",
      peg$c69 = peg$literalExpectation("cot", false),
      peg$c70 = "asin",
      peg$c71 = peg$literalExpectation("asin", false),
      peg$c72 = "acos",
      peg$c73 = peg$literalExpectation("acos", false),
      peg$c74 = "atan",
      peg$c75 = peg$literalExpectation("atan", false),
      peg$c76 = "asec",
      peg$c77 = peg$literalExpectation("asec", false),
      peg$c78 = "acsc",
      peg$c79 = peg$literalExpectation("acsc", false),
      peg$c80 = "acot",
      peg$c81 = peg$literalExpectation("acot", false),
      peg$c82 = "arcsin",
      peg$c83 = peg$literalExpectation("arcsin", false),
      peg$c84 = "arccos",
      peg$c85 = peg$literalExpectation("arccos", false),
      peg$c86 = "arctan",
      peg$c87 = peg$literalExpectation("arctan", false),
      peg$c88 = "arcsec",
      peg$c89 = peg$literalExpectation("arcsec", false),
      peg$c90 = "arccsc",
      peg$c91 = peg$literalExpectation("arccsc", false),
      peg$c92 = "arccot",
      peg$c93 = peg$literalExpectation("arccot", false),
      peg$c94 = "ln",
      peg$c95 = peg$literalExpectation("ln", false),
      peg$c96 = "log",
      peg$c97 = peg$literalExpectation("log", false),
      peg$c98 = "exp",
      peg$c99 = peg$literalExpectation("exp", false),
      peg$c100 = "floor",
      peg$c101 = peg$literalExpectation("floor", false),
      peg$c102 = "ceil",
      peg$c103 = peg$literalExpectation("ceil", false),
      peg$c104 = "round",
      peg$c105 = peg$literalExpectation("round", false),
      peg$c106 = "random",
      peg$c107 = peg$literalExpectation("random", false),
      peg$c108 = "sum",
      peg$c109 = peg$literalExpectation("sum", false),
      peg$c110 = function(n) { return n; },
      peg$c111 = function(head, n) { return n; },
      peg$c112 = function(head, tail) {
            if(options.autoMult){
              return tail.reduce(function(result, element) {
                return new Node("*" , [result, element[1]]);
              }, head);
            } else {
              throw {
                message: 'invalid syntax, hint: missing * sign',
                location: location()
              }
            }
          },
      peg$c113 = function(name) { return options.functions.indexOf(name)>-1; },
      peg$c114 = function(name, parentheses) { return new Node('function', parentheses, { name }); },
      peg$c115 = "(",
      peg$c116 = peg$literalExpectation("(", false),
      peg$c117 = ")",
      peg$c118 = peg$literalExpectation(")", false),
      peg$c119 = function(args) { return new Node('()', args); },
      peg$c120 = "|",
      peg$c121 = peg$literalExpectation("|", false),
      peg$c122 = function(expr) { return new Node('||', [expr]) },
      peg$c123 = peg$otherExpectation("superscript"),
      peg$c124 = "^",
      peg$c125 = peg$literalExpectation("^", false),
      peg$c126 = function(arg) { return arg; },
      peg$c127 = peg$otherExpectation("number"),
      peg$c128 = function(sign) {
          let value = parseFloat(text());
          return new Node('number', [], {value});
        },
      peg$c129 = /^[0-9]/,
      peg$c130 = peg$classExpectation([["0", "9"]], false, false),
      peg$c131 = function() {
          let value = parseFloat(text());
          return new Node('number', [], {value});
        },
      peg$c132 = ".",
      peg$c133 = peg$literalExpectation(".", false),
      peg$c134 = peg$otherExpectation("name"),
      peg$c135 = function() {
        let name = text();
        if(options.builtInFunctions.indexOf(name) > -1 || options.functions.indexOf(name) > -1){
          throw new Error(`give the function "${name}" its arguments! can't use the function a variable!`);
        }
        return new Node('id', [], {name})
      },
      peg$c136 = function() { return !options.singleCharName },
      peg$c137 = "_",
      peg$c138 = peg$literalExpectation("_", false),
      peg$c139 = peg$otherExpectation("letter or digit"),
      peg$c140 = /^[a-zA-Z0-9]/,
      peg$c141 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"]], false, false),
      peg$c142 = peg$otherExpectation("letter"),
      peg$c143 = /^[a-zA-Z]/,
      peg$c144 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false),
      peg$c145 = peg$otherExpectation("newline"),
      peg$c146 = "\n",
      peg$c147 = peg$literalExpectation("\n", false),
      peg$c148 = "\r\n",
      peg$c149 = peg$literalExpectation("\r\n", false),
      peg$c150 = "\r",
      peg$c151 = peg$literalExpectation("\r", false),
      peg$c152 = "\u2028",
      peg$c153 = peg$literalExpectation("\u2028", false),
      peg$c154 = "\u2029",
      peg$c155 = peg$literalExpectation("\u2029", false),
      peg$c156 = peg$otherExpectation("space or tab"),
      peg$c157 = /^[ \t]/,
      peg$c158 = peg$classExpectation([" ", "\t"], false, false),
      peg$c159 = peg$otherExpectation("whitespace"),
      peg$c160 = "!",
      peg$c161 = peg$literalExpectation("!", false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseExpression() {
    var s0, s1;

    peg$silentFails++;
    s0 = peg$parseOperation11();
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c0); }
    }

    return s0;
  }

  function peg$parseOperation11() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parseOperation12();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse_();
      if (s4 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 61) {
          s5 = peg$c2;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c3); }
        }
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          if (s6 !== peg$FAILED) {
            s7 = peg$parseOperation12();
            if (s7 !== peg$FAILED) {
              s4 = [s4, s5, s6, s7];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parse_();
        if (s4 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 61) {
            s5 = peg$c2;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c3); }
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parse_();
            if (s6 !== peg$FAILED) {
              s7 = peg$parseOperation12();
              if (s7 !== peg$FAILED) {
                s4 = [s4, s5, s6, s7];
                s3 = s4;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c4(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c1); }
    }

    return s0;
  }

  function peg$parseOperation12() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parseOperation13();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse_();
      if (s4 !== peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c5) {
          s5 = peg$c5;
          peg$currPos += 2;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c6); }
        }
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          if (s6 !== peg$FAILED) {
            s7 = peg$parseOperation13();
            if (s7 !== peg$FAILED) {
              s4 = [s4, s5, s6, s7];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parse_();
        if (s4 !== peg$FAILED) {
          if (input.substr(peg$currPos, 2) === peg$c5) {
            s5 = peg$c5;
            peg$currPos += 2;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c6); }
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parse_();
            if (s6 !== peg$FAILED) {
              s7 = peg$parseOperation13();
              if (s7 !== peg$FAILED) {
                s4 = [s4, s5, s6, s7];
                s3 = s4;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c4(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c1); }
    }

    return s0;
  }

  function peg$parseOperation13() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parseOperation14();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse_();
      if (s4 !== peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c7) {
          s5 = peg$c7;
          peg$currPos += 2;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c8); }
        }
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          if (s6 !== peg$FAILED) {
            s7 = peg$parseOperation14();
            if (s7 !== peg$FAILED) {
              s4 = [s4, s5, s6, s7];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parse_();
        if (s4 !== peg$FAILED) {
          if (input.substr(peg$currPos, 2) === peg$c7) {
            s5 = peg$c7;
            peg$currPos += 2;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c8); }
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parse_();
            if (s6 !== peg$FAILED) {
              s7 = peg$parseOperation14();
              if (s7 !== peg$FAILED) {
                s4 = [s4, s5, s6, s7];
                s3 = s4;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c4(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c1); }
    }

    return s0;
  }

  function peg$parseOperation14() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parseOperation15();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse_();
      if (s4 !== peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c9) {
          s5 = peg$c9;
          peg$currPos += 2;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c10); }
        }
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          if (s6 !== peg$FAILED) {
            s7 = peg$parseOperation15();
            if (s7 !== peg$FAILED) {
              s4 = [s4, s5, s6, s7];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parse_();
        if (s4 !== peg$FAILED) {
          if (input.substr(peg$currPos, 2) === peg$c9) {
            s5 = peg$c9;
            peg$currPos += 2;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c10); }
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parse_();
            if (s6 !== peg$FAILED) {
              s7 = peg$parseOperation15();
              if (s7 !== peg$FAILED) {
                s4 = [s4, s5, s6, s7];
                s3 = s4;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c4(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c1); }
    }

    return s0;
  }

  function peg$parseOperation15() {
    var s0, s1, s2, s3, s4, s5, s6, s7;
